--- a/assets/sass/MyPage.scss
+++ b/assets/sass/MyPage.scss
@@ -46,6 +46,7 @@
   @import "partials/media";
   @import "partials/list-group";
   @import "partials/panels";
+  @import "partials/panel-with-tabs";
   @import "partials/responsive-embed";
   @import "partials/wells";
   @import "partials/close";
