--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,19 +1,19 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Uvic-myspace by bitHero</title>
+{{#>default}}
+<div class="container">
+<div id="content">
+    <div class="panel with-nav-tabs panel-default">
+        <div class="panel-heading">
+            <ul class="nav nav-tabs">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">Courses</a></li>
+                <li><a href="#">Finances</a></li>
+                <li><a href="#">Help</a></li>
+            </ul>
+        </div>
+        <div class="panel-body" style="min-height: 60vh;">
 
-    <link rel="stylesheet" href="../assets/css/MyPage.css">
-    <meta name="viewport" content="width=device-width">
-  </head>
-  <body>
-  {{> uvicNav}}
-  {{> uvicHeader}}
-
-  {{content}}
-
-  {{> uvicFooter}}
-  </body>
-</html>
+        </div>
+    </div>
+</div>
+</div>
+{{/default}}
