--- a/templates/finances/index.hbs
+++ b/templates/finances/index.hbs
@@ -1,4 +1,4 @@
-{{#>default page=sections.home}}
+{{#>default page=sections.finances}}
 <div style="min-height: 60vh;">
     {{! This is the starter for a section page
         -------------------------------------------------------
