--- a/templates/records/index.hbs
+++ b/templates/records/index.hbs
@@ -1,4 +1,4 @@
-{{#>default page=sections.home}}
+{{#>default page=sections.records}}
 <div style="min-height: 60vh;">
     {{! This is the starter for a section page
         -------------------------------------------------------
