--- a/templates/courses/index.hbs
+++ b/templates/courses/index.hbs
@@ -8,38 +8,56 @@
     }}
     {{! Access the page context with `page` (see globals.json)}}
     <h2>{{page.title}}</h2>
+    {{! Buttons at the top}}
+
+
+    <div class="btn-group">
+        <button class="btn">nvm</button>
+        <button class="btn">Middle</button>
+        <button class="btn">Right</button>
+    </div>
+
+
+
+
+
+
     {{! Access the page context with `user` (see amy.json)}}
     <p>{{user.content}}</p>
-    <h6>test</h6>
+
+
+    <p>{{user.content}}</p>
+
     <div class="container">
-        <h2>Striped Rows</h2>
-        <p>The .table-striped class adds zebra-stripes to a table:</p>
+        <h3>Spring 2016</h3>
+        <p>Semester Balance: $0.00</p>
         <table class="table table-striped">
             <thead>
             <tr>
-                <th>Firstname</th>
-                <th>Lastname</th>
+                <th>Courses</th>
+                <th>Amount</th>
                 <th>Email</th>
             </tr>
             </thead>
             <tbody>
             <tr>
-                <td>John</td>
-                <td>Doe</td>
+                <td>SENG 321</td>
+                <td>582.27</td>
                 <td>john@example.com</td>
             </tr>
             <tr>
-                <td>Mary</td>
-                <td>Moe</td>
+                <td>CSC 226</td>
+                <td>582.27</td>
                 <td>mary@example.com</td>
             </tr>
             <tr>
-                <td>July</td>
-                <td>Dooley</td>
+                <td>ELEC 310</td>
+                <td>582.27</td>
                 <td>july@example.com</td>
             </tr>
             </tbody>
         </table>
     </div>
+
 </div>
 {{/default}}
