Fixed a bunch of stuff i messed up

--- a/templates/finances/index.hbs
+++ b/templates/finances/index.hbs
@@ -65,22 +65,22 @@
         <table class="table table-striped">
             <thead>
             <tr>
-                <th class="col-md-3">Courses</th>
+                <th class="col-md-3">Semester</th>
                 <th class="col-md-9">Amount</th>
             </tr>
             </thead>
             <tbody>
             <tr>
-                <td>SENG 321</td>
-                <td>582.27</td>
+                <td>Spring 2016</td>
+                <td>$3,500</td>
             </tr>
             <tr>
-                <td>CSC 226</td>
-                <td>582.27</td>
+                <td>Fall 2015</td>
+                <td>$3,500</td>
             </tr>
             <tr>
-                <td>ELEC 310</td>
-                <td>582.27</td>
+                <td>Summer 2015</td>
+                <td>$2,750</td>
             </tr>
             </tbody>
         </table>
