--- a/templates/finances/index.hbs
+++ b/templates/finances/index.hbs
@@ -30,7 +30,7 @@
     <p>{{user.content}}</p>
     <h3>{{user.classes}}</h3>
 
-    <div class="container">
+    <div class="row">
         <div class="col-xs-6">
             <h2 class="sub-header">Spring 2016</h2>
             <p>Semester Balance: $0.00</p>
