--- a/templates/partials/default.hbs
+++ b/templates/partials/default.hbs
@@ -14,7 +14,7 @@
         <div id="content">
             <div class="panel with-nav-tabs panel-default">
                 <div class="panel-heading">
-                    {{> nav active=page}}
+                    {{> nav}}
                 </div>
                 <div class="panel-body">
                     {{> @partial-block }}
