--- a/templates/courses/program.hbs
+++ b/templates/courses/program.hbs
@@ -1,4 +1,4 @@
-{{#>default section=sections.courses page=sections.courses.subsections.timetable}}
+{{#>default section=sections.courses page=sections.courses.subsections.program_change}}
 <div style="min-height: 60vh;">
     {{! This is the starter for a section page
         -------------------------------------------------------
