--- a/templates/partials/default.hbs
+++ b/templates/partials/default.hbs
@@ -17,7 +17,12 @@
                     {{> nav}}
                 </div>
                 <div class="panel-body">
-                    {{> @partial-block }}
+                    <div class="row">
+                        <div class="col-xs-12">
+                            {{> subnav}}
+                        </div>
+                    </div>
+                        {{> @partial-block }}
                 </div>
             </div>
         </div>
