--- a/templates/courses/Graduation.hbs
+++ b/templates/courses/Graduation.hbs
@@ -1,4 +1,4 @@
-{{#>default section=sections.courses page=sections.courses.subsections.timetable}}
+{{#>default section=sections.courses page=sections.courses.subsections.graduation}}
 <div style="min-height: 60vh;">
     {{! This is the starter for a section page
         -------------------------------------------------------
