Fix home highlighting

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,4 +1,4 @@
-{{#>default page=sections.home}}
+{{#>default section=sections.home page=sections.home}}
 <div style="min-height: 60vh;">
     {{! This is the starter for a section page
         -------------------------------------------------------
