--- a/templates/finances/index.hbs
+++ b/templates/finances/index.hbs
@@ -43,7 +43,7 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>SENG 321</td>
+                    <td>{{user.class1}}</td>
                     <td>582.27</td>
                 </tr>
                 <tr>
