--- a/templates/finances/account.hbs
+++ b/templates/finances/account.hbs
@@ -22,17 +22,18 @@
 
                 {{!Print Button}}
                 <div class="btn-group">
-                    <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
-                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <span class="sr-only">Toggle Dropdown</span>
-                    </button>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Separated link</a>
+                    <div class=text-right>
+                        <button type="button" onclick="printFunction()" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Print <span class="caret"></span>
+                        </button>
                     </div>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Summer 2013</a></li>
+                        <li><a href="#">Fall 2013</a></li>
+                        <li><a href="#">Spring 2014</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">All</a></li>
+                    </ul>
                 </div>
 
 
