--- a/templates/records/grades.hbs
+++ b/templates/records/grades.hbs
@@ -6,9 +6,27 @@
         - Data comes in from JSON files, please put all data/strings in the JSON files
         - Keep the data organized, if you're adding financial data put it under "finances"
     }}
-    {{! Access the page context with `page` (see globals.json)}}
-    <h2>{{page.title}}</h2>
-    {{! Access the page context with `user` (see amy.json)}}
-    <p>{{user.content}}</p>
+    {{#each user.records.grades}}
+        <h2>{{semester}}</h2>
+        <p><span class="text-muted">Semester GPA </span><span class="badge">{{semester_GPA}}</span></p>
+        <!-- Grade Table -->
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Course</th>
+                    <th>Percent</th>
+                    <th>Letter Grade</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>{{#each courses}}
+                    <td>{{code}}{{number}}</td>
+                    <td>{{percent}}</td>
+                    <td>{{letter}}</td>
+                </tr>{{/each}}
+            </tbody>
+        </table>
+    {{/each}}
+
 </div>
 {{/default}}
