Added Taxes page tables

--- a/templates/finances/taxes.hbs
+++ b/templates/finances/taxes.hbs
@@ -11,66 +11,168 @@
     {{! Access the page context with `page` (see globals.json)}}
     <h2>Proof of Enrollment</h2>
 
-    <!-- Semester Button -->
-    <div class="btn-group">
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Semester <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu">
-            <li><a href="#">Summer 2013</a></li>
-            <li><a href="#">Fall 2013</a></li>
-            <li><a href="#">Spring 2014</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">All</a></li>
-        </ul>
-    </div>
-    {{!Print Button}}
-    <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
-    {{!Download Button}}
-    <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+    <table class="table table-condensed table-striped col-md-3">
+        <thead>
+        <tr>
+            <th class="col-md-2">Semester</th>
+            <th class="col-md-1"></th>
+            <th class="col-md-8"></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Spring 2015</td>
+            <td>
+                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+            </td>
+            <td>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+            </td>
+        </tr>
+        <tr>
+            <td>Summer 2015</td>
+            <td>
+                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+            </td>
+            <td>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+            </td>
+        </tr>
+        <tr>
+            <td>Spring 2016</td>
+            <td>
+                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+            </td>
+            <td>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+            </td>
+        </tr>
+        <tr>
+            <td>Summer 2016</td>
+            <td>
+                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+            </td>
+            <td>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+            </td>
+        </tr>
+
+        </tbody>
+    </table>
 
     <h2>T2202A Tax Form</h2>
     {{!T2202A Tax Form}}
-    <div class="btn-group">
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Semester <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu">
-            <li><a href="#">Summer 2013</a></li>
-            <li><a href="#">Fall 2013</a></li>
-            <li><a href="#">Spring 2014</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">All</a></li>
-        </ul>
-    </div>
-    {{!Print Button}}
-    <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
-    {{!Download Button}}
-    <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+    <table class="table table-condensed table-striped col-md-3">
+        <thead>
+        <tr>
+            <th class="col-md-2">Semester</th>
+            <th class="col-md-1"></th>
+            <th class="col-md-8"></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Spring 2015</td>
+            <td>
+                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+            </td>
+            <td>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+            </td>
+        </tr>
+        <tr>
+            <td>Summer 2015</td>
+            <td>
+                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+            </td>
+            <td>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+            </td>
+        </tr>
+        <tr>
+            <td>Spring 2016</td>
+            <td>
+                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+            </td>
+            <td>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+            </td>
+        </tr>
+        <tr>
+            <td>Summer 2016</td>
+            <td>
+                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+            </td>
+            <td>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+            </td>
+        </tr>
+
+        </tbody>
+    </table>
+
+
+
 
     <h2>T4A/T4 Tax Form</h2>
     {{!T2202A Tax Form}}
-    <div class="btn-group">
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Semester <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu">
-            <li><a href="#">Summer 2013</a></li>
-            <li><a href="#">Fall 2013</a></li>
-            <li><a href="#">Spring 2014</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">All</a></li>
-        </ul>
-    </div>
-    {{!Print Button}}
-    <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
-    {{!Download Button}}
-    <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+    <table class="table table-condensed table-striped col-md-3">
+        <thead>
+        <tr>
+            <th class="col-md-2">Semester</th>
+            <th class="col-md-1"></th>
+            <th class="col-md-8"></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Spring 2015</td>
+            <td>
+                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+            </td>
+            <td>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+            </td>
+        </tr>
+        <tr>
+            <td>Summer 2015</td>
+            <td>
+                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+            </td>
+            <td>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+            </td>
+        </tr>
+        <tr>
+            <td>Spring 2016</td>
+            <td>
+                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+            </td>
+            <td>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+            </td>
+        </tr>
+        <tr>
+            <td>Summer 2016</td>
+            <td>
+                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+            </td>
+            <td>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+            </td>
+        </tr>
 
+        </tbody>
+    </table>
+
+
+</div>
 
 
     {{! Access the page context with `user` (see amy.json)
     <p>{{user.content}}{{!</p>}}
+
+
 
 
     {{!Print Script}}
