--- a/templates/finances/awards.hbs
+++ b/templates/finances/awards.hbs
@@ -6,10 +6,10 @@
         - Data comes in from JSON files, please put all data/strings in the JSON files
         - Keep the data organized, if you're adding financial data put it under "finances"
     }}
-    {{! Access the page context with `page` (see globals.json)}}
-    {{! Access the page context with `user` (see amy.json)}}
-    <h2>Apply</h2>
 
+    {{!Apply}}
+
+    <h2>Apply</h2>
     <table class="table table-striped">
         <thead>
         <tr>
@@ -27,6 +27,7 @@
             <td>2016-01-01</td>
             <td>2016-06-31</td>
             <td><a href="#" class="btn btn-primary btn-success">Apply Now</a></td>
+
         </tr>
         <tr>
             <td>UVic Athletic Achievement Award</td>
@@ -67,6 +68,7 @@
         </tbody>
     </table>
 
+    {{!Review}}
     <h2>Review</h2>
     <table class="table table-striped">
         <thead>
@@ -75,7 +77,7 @@
             <th class="col-md-3">Description</th>
             <th class="col-md-2">Deadline</th>
             <th class="col-md-2">Date Submitted</th>
-            <th class="col-md-1">Application Status</th>
+            <th class="col-md-1">Status</th>
         </tr>
         </thead>
         <tbody>
