--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,14 +1,20 @@
 {{#>default section=sections.home page=sections.home}}
-<div style="min-height: 60vh;">
-    {{! This is the starter for a section page
-        -------------------------------------------------------
-        - The tag at the top brings in the default portions
-        - Data comes in from JSON files, please put all data/strings in the JSON files
-        - Keep the data organized, if you're adding financial data put it under "finances"
-    }}
-    {{! Access the page context with `page` (see globals.json)}}
-    <h2>{{page.title}}</h2>
-    {{! Access the page context with `user` (see amy.json)}}
-    <p>{{user.content}}</p>
+<div class="dashboard col-md-8">
+    <h3>Dashboard</h3>
+    <!-- tabs bottom -->
+    <div class="tabbable tabs-below">
+        <div class="panel panel-default tab-content">{{#each page.panels}}
+            <div class="panel-body tab-pane{{#if (equals ../page.active_panel @key)}} active{{/if}}"
+                 id="dashboard-{{@key}}">
+                {{>(lookup . "template")}}
+            </div>{{/each}}
+        </div>
+        <ul class="nav nav-tabs">{{#each page.panels}}
+            <li class="{{#if (equals ../page.active_panel @key)}}active{{/if}}">
+                <a href="#dashboard-{{@key}}" data-toggle="tab">{{title}}</a>
+            </li>{{/each}}
+        </ul>
+    </div>
+    <!-- /tabs -->
 </div>
 {{/default}}
