--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -6,10 +6,86 @@
   }
 }
 
-.timetable {
-  table {
-      th {
+
+table.timetable {
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: $line-height-computed;
+  // Cells
+  > thead,
+  > tbody,
+  > tfoot {
+    > tr {
+      > th,
+      > td {
+        line-height: $line-height-base;
+        position: relative;
+        vertical-align: top;
+        text-align: center;
+        > .fill {
+          min-height: 2*$table-cell-padding;
+        }
+        > .event {
+          position: absolute;
+          width: 100%;
+          height: 63px;
+          margin: 1px 0;
+          border-radius: $border-radius-base;
+          border: solid 1px $gray-light;
+          background: $gray-lighter;
+          text-align: left;
+        }
+      }
+    }
+    > tr {
+      > th
+      {
+        padding: $table-cell-padding;
+      }
+    }
+    > tr {
+      > th.time {
+        color: darken($table-border-color, 10%);
+        font-size: $font-size-small;
+        text-align: right;
+      }
+    }
+    > tr {
+      > td {
+        border-top: 1px solid $table-border-color;
+        border-bottom: 1px dotted $table-border-color;
+      }
+    }
+    > tr.half-hour {
+      > td {
+        border: none;
+      }
+    }
+  }
+  // Bottom align for column headings
+  > thead > tr > th {
+    vertical-align: bottom;
+    border-bottom: 2px solid $table-border-color;
+  }
+  // Remove top border from thead by default
+  > caption + thead,
+  > colgroup + thead,
+  > thead:first-child {
+    > tr:first-child {
+      > th,
+      > td {
+        border-top: 0;
         text-align: center;
       }
+    }
+  }
+  // Account for multiple tbody instances
+  > tbody + tbody {
+    border-top: 2px solid $table-border-color;
+  }
+
+  // Nesting
+  .table {
+    background-color: $body-bg;
   }
 }
