--- a/templates/partials/week_panel.hbs
+++ b/templates/partials/week_panel.hbs
@@ -3,23 +3,23 @@
     - It exists in the context of "Week"
 }}
 <h4>{{title_long}}</h4>
-<div class="panel panel-default timetable">
+<div class="panel panel-default">
     <!-- Table -->
-    <table class="table table-bordered table-hover" width="100%">
+    <table class="timetable" width="100%">
         <thead>
             <tr>
                 <th width="10%"><i class="fa fa-clock-o"></i></th>{{#each days}}
                 <th width="18%">{{this}}</th>{{/each}}
             </tr>
-        </thead>{{log (list_times times.start times.end)}}
+        </thead>
         <tbody>{{#each (list_times times.start times.end)}}
-        <tr>
-            <th rowspan="2">{{to12hour this}}:00</th>{{#each ../days}}
-            <td></td>{{/each}}
+        <tr class="half-hour">
+            <th class="time" rowspan="2">{{to12hour this}}</th>{{#each ../days}}
+            <td><div class="fill"></div></td>{{/each}}
         </tr>
         <tr>
         {{#each ../days}}
-            <td></td>{{/each}}
+            <td><div class="fill"></div></td>{{/each}}
         </tr>{{/each}}
         </tbody>
     </table>
