Add Icons, fixed alignment on a few other buttons

--- a/templates/finances/taxes.hbs
+++ b/templates/finances/taxes.hbs
@@ -31,37 +31,37 @@
         <tr>
             <td>Spring 2015</td>
             <td>
-                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
             </td>
             <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
             </td>
         </tr>
         <tr>
             <td>Summer 2015</td>
             <td>
-                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
             </td>
             <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
             </td>
         </tr>
         <tr>
             <td>Spring 2016</td>
             <td>
-                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
             </td>
             <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
             </td>
         </tr>
         <tr>
             <td>Summer 2016</td>
             <td>
-                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
             </td>
             <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
             </td>
         </tr>
 
@@ -86,37 +86,37 @@
         <tr>
             <td>Spring 2015</td>
             <td>
-                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
             </td>
             <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
             </td>
         </tr>
         <tr>
             <td>Summer 2015</td>
             <td>
-                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
             </td>
             <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
             </td>
         </tr>
         <tr>
             <td>Spring 2016</td>
             <td>
-                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
             </td>
             <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
             </td>
         </tr>
         <tr>
             <td>Summer 2016</td>
             <td>
-                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
             </td>
             <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
             </td>
         </tr>
 
@@ -142,37 +142,37 @@
         <tr>
             <td>Spring 2015</td>
             <td>
-                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
             </td>
             <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
             </td>
         </tr>
         <tr>
             <td>Summer 2015</td>
             <td>
-                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
             </td>
             <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
             </td>
         </tr>
         <tr>
             <td>Spring 2016</td>
             <td>
-                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
             </td>
             <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
             </td>
         </tr>
         <tr>
             <td>Summer 2016</td>
             <td>
-                <a href="#" class="btn btn-info">Download <span class="glyphicon glyphicon-download"></span></a>
+                <a href="#" class="btn btn-info">Download <i class="fa fa-download"></i></a>
             </td>
             <td>
-                <button type="button" onclick="printFunction()" class="btn btn-primary">Print</button>
+                <button type="button" onclick="printFunction()" class="btn btn-primary">Print <i class="fa fa-print"></i></button>
             </td>
         </tr>
 
