--- a/templates/finances/account.hbs
+++ b/templates/finances/account.hbs
@@ -19,22 +19,22 @@
     <div class="row">
         <div class="col-xs-6">
             <h2 class="sub-header">Spring 2016
+                <div class=pull-right>
+                    {{!Print Button}}
+                    <div class="btn-group">
 
-                {{!Print Button}}
-                <div class="btn-group">
-                    <div class=text-right>
-                        <button type="button" onclick="printFunction()" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Print <span class="caret"></span>
-                        </button>
+                            <button type="button" onclick="printFunction()" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Print <i class="fa fa-print"></i> <span class="caret"></span>
+                            </button>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Summer 2013</a></li>
+                            <li><a href="#">Fall 2013</a></li>
+                            <li><a href="#">Spring 2014</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">All</a></li>
+                        </ul>
                     </div>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Summer 2013</a></li>
-                        <li><a href="#">Fall 2013</a></li>
-                        <li><a href="#">Spring 2014</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">All</a></li>
-                    </ul>
-                </div>
+                 </div>
 
 
 
@@ -44,29 +44,42 @@
                 <thead>
                 <tr>
                     <th class="col-md-3">Courses</th>
-                    <th class="col-md-9">Amount</th>
+                    <th class="col-md-3">Amount</th>
+                    <th class="col-md-3">Paid</th>
+                    <th class="col-md-3 ">Due</th>
+
                 </tr>
                 </thead>
                 <tbody>
                 <tr>
                     <td>{{user.class1}}</td>
                     <td>{{user.price1}}</td>
+                    <td>$0.00</td>
+                    <td class="danger">{{user.price1}}</td>
                 </tr>
                 <tr>
                     <td>{{user.class2}}</td>
                     <td>{{user.price2}}</td>
+                    <td>{{user.price2}}</td>
+                    <td class="success">$0.00</td>
                 </tr>
                 <tr>
                     <td>{{user.class3}}</td>
                     <td>{{user.price3}}</td>
+                    <td>{{user.price3}}</td>
+                    <td class="success">$0.00</td>
                 </tr>
                 <tr>
                     <td>{{user.class4}}</td>
                     <td>{{user.price4}}</td>
+                    <td>{{user.price4}}</td>
+                    <td class="success">$0.00</td>
                 </tr>
                 <tr>
                     <td>{{user.class5}}</td>
                     <td>{{user.price5}}</td>
+                    <td>{{user.price5}}</td>
+                    <td class="success">$0.00</td>
                 </tr>
                 </tbody>
             </table>
@@ -74,30 +87,48 @@
 
         <div class="col-xs-6">
             <h2 class="sub-header">Balance
+                <div class=pull-right>
+                    <a href="#" class="btn btn-info">Pay Now <i class="fa fa-credit-card"></i></a>
+                </div>
             </h2>
+
+
+
+
+
             <p>Current Balance: $0.00</p>
             <table class="table table-striped">
                 <thead>
                 <tr>
                     <th class="col-md-3">Semester</th>
-                    <th class="col-md-9">Amount</th>
+                    <th class="col-md-3">Amount</th>
+                    <th class="col-md-3">Paid</th>
+                    <th class="col-md-3 ">Due</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr>
                     <td>Spring 2016</td>
                     <td>$3,500</td>
+                    <td>$3,000</td>
+                    <td class = "danger">$500.00</td>
+
                 </tr>
                 <tr>
                     <td>Fall 2015</td>
                     <td>$3,500</td>
+                    <td>$3,500</td>
+                    <td class = "success">$0.00</td>
                 </tr>
                 <tr>
                     <td>Summer 2015</td>
                     <td>$2,750</td>
+                    <td>$2,750</td>
+                    <td class = "success">$0.00</td>
                 </tr>
                 </tbody>
             </table>
+
 
         </div>
 
