--- a/templates/finances/awards.hbs
+++ b/templates/finances/awards.hbs
@@ -8,7 +8,15 @@
     }}
 
     {{!Apply}}
-    
+    {{!Icons
+    Checkmark= icon-check
+    <i class="fa fa-check"></i>
+
+
+
+    }}
+
+
 
     <h2>Apply</h2>
     <table class="table table-striped">
@@ -27,7 +35,9 @@
             <td><a href="http://www.yahoo.com">More Info</a></td>
             <td>2016-01-01</td>
             <td>2016-06-31</td>
-            <td><a href="#" class="btn btn-primary btn-success">Apply Now</a></td>
+            <td><a href="#" class="btn btn-primary btn-success">
+                Apply Now
+                <i class="fa fa-check"></i></a></td>
 
         </tr>
         <tr>
@@ -35,35 +45,40 @@
             <td><a href="http://www.yahoo.com">More Info</a></td>
             <td>2016-02-01</td>
             <td>2016-04-31</td>
-            <td><a href="#" class="btn btn-primary btn-success">Apply Now</a></td>
+            <td><a href="#" class="btn btn-primary btn-success">Apply Now
+                <i class="fa fa-check"></i></a></td></a></td>
         </tr>
         <tr>
             <td>D.Trump Award for Excellence in Wall-Building</td>
             <td><a href="http://www.yahoo.com">More Info</a></td>
             <td>2016-01-01</td>
             <td>2017-01-01</td>
-            <td><a href="#" class="btn btn-primary btn-success">Apply Now</a></td>
+            <td><a href="#" class="btn btn-primary btn-success">Apply Now
+                <i class="fa fa-check"></i></a></td></a></td>
         </tr>
         <tr>
             <td>R.A. Stimpleson Memorial Award</td>
             <td><a href="http://www.yahoo.com">More Info</a></td>
             <td>2014-11-21</td>
             <td>2018-11-20</td>
-            <td><a href="#" class="btn btn-primary btn-success">Apply Now</a></td>
+            <td><a href="#" class="btn btn-primary btn-success">Apply Now
+                <i class="fa fa-check"></i></a></td></a></td>
         </tr>
         <tr>
             <td>Govt. Of Canada - Maple Leaf Prize</td>
             <td><a href="http://www.yahoo.com">More Info</a></td>
             <td>2016-05-01</td>
             <td>2017-04-30</td>
-            <td><a href="#" class="btn btn-warning">Watch</a></td>
+            <td><a href="#" class="btn btn-warning">Watch
+                <i class="fa fa-clock-o"></i></a></td></a></td>
         </tr>
         <tr>
             <td>UVSS Sign-Making Excellence Scholarship</td>
             <td><a href="http://www.yahoo.com">More Info</a></td>
             <td>2017-01-01</td>
             <td>2017-04-30</td>
-            <td><a href="#" class="btn btn-warning">Watch</a></td>
+            <td><a href="#" class="btn btn-warning">Watch
+                <i class="fa fa-clock-o"></i></a></td></a></td>
         </tr>
 
         </tbody>
